--- a/p06/Makefile
+++ b/p06/Makefile
@@ -1,10 +1,13 @@
 all: clean_out output clean
 
-output: pingpong-contab.o queue.o pingpong.o
+output: pingpong-contab.o pingpong-contab-prio.o queue.o pingpong.o
 	gcc pingpong-contab.o queue.o pingpong.o -o output
 
 pingpong-contab.o: pingpong-contab.c
 	gcc -c pingpong-contab.c
+
+pingpong-contab-prio.o: pingpong-contab-prio.c
+	gcc -c pingpong-contab-prio.c
 
 pingpong.o: pingpong.c pingpong.h datatypes.h
 	gcc -c pingpong.c
