--- a/p07/Makefile
+++ b/p07/Makefile
@@ -1,13 +1,10 @@
 all: clean_out output clean
 
-output: pingpong-contab.o pingpong-contab-prio.o queue.o pingpong.o
-	gcc -Wall -Wextra pingpong-contab-prio.o queue.o pingpong.o -o output
+output: pingpong-maintask.o queue.o pingpong.o
+	gcc -Wall -Wextra pingpong-maintask.o queue.o pingpong.o -o output
 
-pingpong-contab.o: pingpong-contab.c
-	gcc -c pingpong-contab.c
-
-pingpong-contab-prio.o: pingpong-contab-prio.c
-	gcc -c pingpong-contab-prio.c
+pingpong-maintask.o: pingpong-maintask.c
+	gcc -c pingpong-maintask.c
 
 pingpong.o: pingpong.c pingpong.h datatypes.h
 	gcc -c pingpong.c
